# SmSdk

./: .clang-format  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: c-cpp.yml
include/SmSdk/: AreaTriggerManager.hpp  AudioManager.hpp  BlobData.hpp  Character.hpp  CharacterManager.hpp  ContainerManager.hpp  DirectoryManager.hpp  GameSettings.hpp  GameState.hpp  InputManager.hpp  MyPlayer.hpp  NetObjManager.hpp  Pathfinder.hpp  Player.hpp  PlayerManager.hpp  PortalManager.hpp  TimestampCheck.hpp  bullet_include.hpp  config.hpp  d3d11_include.hpp  jsoncpp_include.hpp  mygui_include.hpp  offsets.hpp
include/SmSdk/Base/: InputTarget.hpp  NetObj.hpp  Task.hpp
include/SmSdk/Creation/: BodyJointPhysicsProxy.hpp  ChildShape.hpp  ControllerBase.hpp  CreationManager.hpp  Joint.hpp  JointPhysicsProxy.hpp  RigidBody.hpp  Shape.hpp
include/SmSdk/Gui/: AudioOptionsMenu.hpp  CompoundButton.hpp  ControlOptionsMenu.hpp  DisplayOptionsMenu.hpp  GameplayOptionsMenu.hpp  GraphicsOptionsMenu.hpp  GuiBase.hpp  GuiInterface.hpp  GuiSystemManager.hpp  HudGui2.hpp  InGameGuiManager.hpp  InGameGuiManagerInterface.hpp  InventoryGui.hpp  MainMenuRootGui.hpp  OptionsItemBase.hpp  OptionsItemSlider.hpp  OptionsMenu.hpp  OptionsSubMenuBase.hpp  PaintToolGui.hpp  RadioButtonSet.hpp  VerticalStackBox.hpp
include/SmSdk/Harvestable/: Harvestable.hpp  HarvestableManager.hpp  HarvestablePhysicsProxy.hpp
include/SmSdk/Network/: ListenServer.hpp  NetworkClient.hpp  (+4 more)
src/: Color.cpp  CreationManager.cpp  OptionsItemSlider.cpp  OptionsSubMenuBase.cpp  PointerGetters.cpp
(+13 files in other folders)
